; ModuleID = '/home/carl/AnghaBench/git/extr_utf8.c_next_hfs_char.c'
source_filename = "/home/carl/AnghaBench/git/extr_utf8.c_next_hfs_char.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8**)* @next_hfs_char to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @next_hfs_char(i8** %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8**, align 8
  %4 = alloca i32, align 4
  store i8** %0, i8*** %3, align 8
  br label %5

5:                                                ; preds = %1, %14
  %6 = load i8**, i8*** %3, align 8
  %7 = call i32 @pick_one_utf8_char(i8** %6, i32* null)
  store i32 %7, i32* %4, align 4
  %8 = load i8**, i8*** %3, align 8
  %9 = load i8*, i8** %8, align 8
  %10 = icmp ne i8* %9, null
  br i1 %10, label %12, label %11

11:                                               ; preds = %5
  store i32 0, i32* %2, align 4
  br label %17

12:                                               ; preds = %5
  %13 = load i32, i32* %4, align 4
  switch i32 %13, label %15 [
    i32 8204, label %14
    i32 8205, label %14
    i32 8206, label %14
    i32 8207, label %14
    i32 8234, label %14
    i32 8235, label %14
    i32 8236, label %14
    i32 8237, label %14
    i32 8238, label %14
    i32 8298, label %14
    i32 8299, label %14
    i32 8300, label %14
    i32 8301, label %14
    i32 8302, label %14
    i32 8303, label %14
    i32 65279, label %14
  ]

14:                                               ; preds = %12, %12, %12, %12, %12, %12, %12, %12, %12, %12, %12, %12, %12, %12, %12, %12
  br label %5

15:                                               ; preds = %12
  %16 = load i32, i32* %4, align 4
  store i32 %16, i32* %2, align 4
  br label %17

17:                                               ; preds = %15, %11
  %18 = load i32, i32* %2, align 4
  ret i32 %18
}

declare dso_local i32 @pick_one_utf8_char(i8**, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
